--- a/client/src/style.css
+++ b/client/src/style.css
@@ -8,6 +8,6 @@
 
 body {
   font-family: "Exo2";
-  @apply bg-gray-100; 
-  @apply text-gray-800;
+  @apply bg-slate-100; 
+  @apply text-slate-800;
 }
