--- a/client/src/animations.css
+++ b/client/src/animations.css
@@ -9,3 +9,11 @@
 .shake {
   animation: shake .2s infinite;
 }
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .1s ease-in-out;
+}
+
+.fade-enter-from, .fade-leave-to {
+  opacity: 0;
+}
