--- a/client/src/assets/colors.sass
+++ b/client/src/assets/colors.sass
@@ -16,7 +16,8 @@ $active: #148F77
 $warning: #F39C12 
 $warning-active: #D68910
 
-$alert: #E74C3C
+$danger: #E74C3C
+$danger-active: #CB4335
 
 $info: $text
 $info-text: white
