--- a/client/src/assets/style.sass
+++ b/client/src/assets/style.sass
@@ -59,7 +59,7 @@ $outline-style: solid
 /* Alert icons are hidden by default */
 .alert-icon
   display: none
-  color: colors.$alert
+  color: colors.$danger
   width: 2rem
   cursor: help
 
