--- a/client/src/assets/transitions.sass
+++ b/client/src/assets/transitions.sass
@@ -13,16 +13,12 @@ $transform: transform $time $function
 .fade-enter-from, .fade-leave-to
   opacity: 0
 
-.bounce-enter-active
+.slide-enter-active, .slide-leave-active
+  transition: transform $time $function
   transform-origin: top
-  animation: bounce-in $time
 
-.bounce-leave-active
-  transform-origin: top
-  animation: bounce-in $time reverse
+.slide-enter-from, .slide-leave-to
+  transform: scaleY(0)
 
-@keyframes bounce-in
-  0%
-    transform: scaleY(0)
-  100%
-    transform: scaleY(1)
+.slide-enter-to, .slide-leave-from
+  transform: scaleY(1)
