--- a/client/src/assets/transitions.sass
+++ b/client/src/assets/transitions.sass
@@ -4,6 +4,7 @@ $function: ease-in-out
 $colors: background-color $time $function
 $filter: filter $time $function
 $focusable: outline-width $time $function
+$position: position $time $function
 $transform: transform $time $function
 
 /* Vue's "fade" transition */
