--- a/client/src/assets/borders.sass
+++ b/client/src/assets/borders.sass
@@ -2,6 +2,8 @@
 
 $radius: .25rem 
 
+$focus-outline-width: .25rem
+
 $card: 1px solid colors.$card-border
 $card-inactive: 1px solid colors.$card-border-inactive
 $form-input: 1px solid
