Lots of stoopid fixes

--- a/client/src/assets/transitions.sass
+++ b/client/src/assets/transitions.sass
@@ -1,7 +1,7 @@
 $time: 100ms
 $function: ease-in-out
 
-$colors: background-color $time $function
+$colors: background-color $time $function, color $time $function
 $filter: filter $time $function
 $focusable: outline-width $time $function
 $position: position $time $function
