--- a/client/src/assets/colors.sass
+++ b/client/src/assets/colors.sass
@@ -20,15 +20,14 @@ $info: $text
 $info-text: white
 $info-border: $text
 
-$disabled: #BDC3C7
-$disabled-primary: #7B7D7D 
+$toggled-off: #BDC3C7
 
 $border: #17A589
 
 $outline: #76D7C4
 
 $input-background: #F8F9F9
-$input-disabled: #E5E7E9
+$input-disabled: #F3F4F6
 $input-border: #BDC3C7
 $input-label: #979A9A
 
