--- a/client/src/assets/borders.sass
+++ b/client/src/assets/borders.sass
@@ -6,4 +6,5 @@ $focus-outline-width: .25rem
 
 $card: 1px solid colors.$card-border
 $card-inactive: 1px solid colors.$card-border-inactive
-$form-input: 1px solid
+
+$form-input: colors.$input-border solid 1px
