--- a/client/src/assets/colors.sass
+++ b/client/src/assets/colors.sass
@@ -6,14 +6,12 @@ $card-border: #D5D8DC
 $card-border-inactive:  #EAEDED 
 $card-shadow: rgba(0, 0, 0, .2)
 
-$button: #E8F8F5
+$button-title: #E8F8F5
 $button-border: black
 $button-shadow: rgba(0, 0, 0, .6)
 
 $primary: #1ABC9C
-
 $warning: #F39C12 
-
 $danger: #E74C3C
 
 $info: $text
@@ -36,3 +34,6 @@ $input-valid-border: #82E0AA
 
 $input-invalid-background: #FDEDEC
 $input-invalid-border: #F1948A
+
+$menu-item-hover: #EAECEE
+$menu-item-select: #D5D8DC
