--- a/client/src/assets/sizings.sass
+++ b/client/src/assets/sizings.sass
@@ -1,2 +1,8 @@
 $input-min-width: 3.25rem
 $input-min-height: 3.25rem
+
+$button-gap: .5rem
+$button-padding: 1rem
+$button-font-size: 1.25rem
+
+$menu-item-padding: 1rem
